Change 'Hook App' to 'hook app' in index.html

--- a/index.html
+++ b/index.html
@@ -136,14 +136,14 @@
         <svg width="60" height="60" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z" fill="#111827"/>
         </svg>
-        <div class="header-title mt-4" style="color: #111827">Hook App</div>
+        <div class="header-title mt-4" style="color: #111827">hook app</div>
         <div class="spinner"></div>
     </div>
 
     <canvas id="splatterCanvas"></canvas>
 
     <div id="lockOverlay">
-        <div class="header-title mb-8">Hook App</div>
+        <div class="header-title mb-8">hook app</div>
         <p class="text-xs uppercase tracking-widest text-gray-400 mb-2">Пробный период завершен</p>
         <h2 class="text-xl font-light mb-6">Активация устройства</h2>
         <input type="text" id="activationKey" class="key-input" placeholder="XXXX-XXXX-XXXX" autocomplete="off">
@@ -156,7 +156,7 @@
     </div>
 
     <header class="sticky-header">
-        <div class="header-title">Hook App</div>
+        <div class="header-title">hook app</div>
         <div id="demoTimer" class="demo-timer">DEMO 30:00</div>
         <div class="info-btn" onclick="toggleModal(true)">Настройки</div>
     </header>
