--- a/index.html
+++ b/index.html
@@ -147,11 +147,11 @@ fill="#111827"
 
     <div id="lockOverlay">
         <div class="header-title mb-8">hook app</div>
-        <p class="text-xs tracking-widest text-gray-400 mb-2">Пробный период завершен</p>
+        <p class="text-xs tracking-widest text-gray-400 uppercase mb-2">Пробный период завершен</p>
         <h2 class="text-xl font-light mb-6">Активация устройства</h2>
         <input type="text" id="activationKey" class="key-input" placeholder="XXXX-XXXX-XXXX" autocomplete="off">
         <button id="activateBtn" onclick="checkKey()" class="save-btn max-w-[300px]">Активировать</button>
-        <p id="keyError" class="mt-4 text-[10px] text-red-500 tracking-widest hidden">Ошибка</p>
+        <p id="keyError" class="mt-4 text-[10px] text-red-500 tracking-widest uppercase hidden">Ошибка</p>
         <div class="mt-10 pt-10 border-t w-full max-w-[300px] border-border">
             <p class="text-[9px] uppercase tracking-widest text-gray-400">ID устройства:</p>
             <p id="deviceIdLabel" class="text-[9px] font-mono mt-1 opacity-50">загрузка...</p>
@@ -401,7 +401,7 @@ fill="#111827"
             function updateLabels() {
                 if (document.getElementById('label_blunt')) document.getElementById('label_blunt').innerText = `Тупой кончик (+${config.price_blunt}₽)`;
                 if (document.getElementById('label_fusion')) document.getElementById('label_fusion').innerText = `Сращивание (+${config.price_fusion}₽)`;
-                if (document.getElementById('label_corr_len')) document.getElementById('label_corr_len').innerText = `Длина (+${config.price_corr_len}₽)`;
+                if (document.getElementById('label_corr_len')) document.getElementById('label_corr_len').innerText = `Сращивание по длине (+${config.price_corr_len}₽)`;
                 if (document.getElementById('label_root')) document.getElementById('label_root').innerText = `Прикорневое валяние (+${config.price_root}₽)`;
             }
 
