--- a/index.html
+++ b/index.html
@@ -195,6 +195,10 @@ fill="#111827"
                 </table>
             </div>
             <button onclick="saveSettings()" class="save-btn mb-12">Применить настройки</button>
+            <div class="border-t border-gray-100 pt-8 text-center">
+                <div class="text-[0.7rem] font-bold uppercase tracking-[0.4em] opacity-80 mb-1">Hook App</div>
+                <div class="text-[0.6rem] text-gray-400 uppercase tracking-widest">Version 3.4.0 Professional Edition</div>
+            </div>        
         </div>
     </div>
 
